# xmr

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTICE
include/generators/: CPPGenerator.hpp  Graph.hpp  IGenerator.hpp  JavaGenerator.hpp
include/parsers/: IParser.hpp  Node.hpp  PapyrusParser.hpp  XmiParser.h  xmi.xsd
include/parsers/schema/: xmi.xsd
libraries/: CMakeLists.txt  Makefile  cmake_install.cmake
libraries/generators/: CPPGenerator.cpp  JavaGenerator.cpp
libraries/parsers/: PapyrusParser.cpp
src/: PapyrusParser.cpp  main.cpp
